--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exército Brasileiro</title>
     <link rel="stylesheet" href="style.css">
-</head>
+ </head>
 
-<body>
+   <body>
+     
+     <header>
+    <a class="links" href="#">Missão</a> 
+    <a class="links" href="#">Brasil</a>
+    <a class="links" href="#">Força</a>
+    </header>
+
+     <main>
+
 
 
 
@@ -128,6 +137,7 @@
     <li>taifeiro de 2ª classe;</li>
     <li>soldado.</li>
 
+<main>
 
 </body>
 
