--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exército Brasileiro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">  
  </head>
 
    <body>
      
      <header>
-    <a class="links" href="#">Missão</a> 
-    <a class="links" href="#">Brasil</a>
-    <a class="links" href="#">Força</a>
+    <a class="links" href="index.html">Início</a> 
+    <a class="links" href="Brasil.html">Brasil</a>
+    <a class="links" href="Missão.html">Missão</a>
     </header>
 
      <main>
